--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,10 +33,13 @@ android {
 }
 
 dependencies {
+
+    implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'io.realm:realm-gradle-plugin:10.10.1'
     implementation 'androidx.appcompat:appcompat:1.6.0'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.android.volley:volley:1.2.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
