--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -11,6 +13,15 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyTheme"
         tools:targetApi="31">
+        <activity
+            android:name=".activitys.add.AddPeliculaActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activitys.SesionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activitys.PeliculaActivity"
+            android:exported="false" />
         <activity
             android:name=".activitys.CarteleraActivity"
             android:exported="false" />
