--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.MyTheme"
         tools:targetApi="31">
         <activity
+            android:name=".activitys.CompraEntradaActivity"
+            android:exported="false" />
+        <activity
             android:name=".activitys.add.AddPeliculaActivity"
             android:exported="false" />
         <activity
