--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,16 +15,20 @@
         tools:targetApi="31">
         <activity
             android:name=".activitys.CompraEntradaActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.NoBar"/>
         <activity
             android:name=".activitys.add.AddPeliculaActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.NoBar"/>
         <activity
             android:name=".activitys.SesionActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.NoBar"/>
         <activity
             android:name=".activitys.PeliculaActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.NoBar"/>
         <activity
             android:name=".activitys.CarteleraActivity"
             android:exported="false" />
